# stargate

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  com.zugaldia.Stargate.yml  meson.build  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build.yml  dependency-submission.yml  flatpak-build.yml  kdocs.yml  release.yml
app/: build.gradle.kts  flatpak-sources.json
app/src/main/kotlin/: App.kt
app/src/main/kotlin/com/zugaldia/stargate/app/: App.kt  AppConstants.kt  AppUtils.kt
app/src/main/kotlin/com/zugaldia/stargate/app/globalshortcuts/: GlobalShortcutsScreen.kt  GlobalShortcutsState.kt  GlobalShortcutsViewModel.kt
app/src/main/kotlin/com/zugaldia/stargate/app/notification/: NotificationScreen.kt  NotificationState.kt  NotificationViewModel.kt
app/src/main/kotlin/com/zugaldia/stargate/app/openuri/: OpenUriScreen.kt  OpenUriState.kt  OpenUriViewModel.kt
app/src/main/kotlin/com/zugaldia/stargate/app/remotedesktop/: RemoteDesktopScreen.kt  RemoteDesktopState.kt  RemoteDesktopViewModel.kt
app/src/main/resources/: Makefile  com.zugaldia.stargate.App.desktop  log4j2.xml  sample_ar.txt  sample_zh.txt
app/src/test/kotlin/com/zugaldia/stargate/app/: AppUtilsTest.kt
buildSrc/: build.gradle.kts  flatpak-sources.json  settings.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
data/: com.zugaldia.Stargate.desktop.in  com.zugaldia.Stargate.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: RELEASING.md  TESTING.md
generator/: build.gradle.kts
generator/src/main/kotlin/com/zugaldia/stargate/generator/: Generator.kt
generator/src/main/resources/: .gitignore  Makefile
generator/src/main/resources/xml/: desktop.xml  global_shortcuts.xml  request.xml  session.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle.kts  flatpak-sources.json
sdk/src/main/kotlin/: Utilities.kt
sdk/src/main/kotlin/com/zugaldia/stargate/sdk/: DesktopConstants.kt  DesktopPortal.kt  DesktopUtils.kt  PersistMode.kt  Printer.kt
sdk/src/test/kotlin/: UtilitiesTest.kt
sdk/src/test/kotlin/com/zugaldia/stargate/sdk/: PrinterTest.kt
utils/src/main/kotlin/: Utilities.kt
utils/src/test/kotlin/: UtilitiesTest.kt
(+48 files in other folders)
